- Fixed spelling mistake with starps.scss - Fixed scrollbar showing on home screen

--- a/src/components/Watch/watch.scss
+++ b/src/components/Watch/watch.scss
@@ -1,6 +1,12 @@
 
 #watch {
-  @import 'starps';
+  @import 'straps';
+
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
+
   .case{
     position:relative;
     z-index:2;
